packages/fuels-macros/tests/ui/setup_program_test/unknown_command.stderr
error: Unrecognized command. Expected one of: 'RunOnLiveNode', 'Wallets', 'Abigen', 'Deploy', 'LoadScript'
  --> tests/ui/setup_program_test/unknown_command.rs:10:5
   |
10 |     UnknownCommand()
   |     ^^^^^^^^^^^^^^
